deploy/kubernetes/05-frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: foundation
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
    - host: foundation.deepland.ir
      http:
        paths:
          - path: /   
            pathType: Prefix
            backend:  
              service:
                name: frontend
                port: 
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: foundation
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80  
      protocol: TCP   
  selector:
    app: frontend
---
apiVersion: apps/v1   
kind: Deployment
metadata:
  name: frontend
  namespace: foundation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app
          image: registry.deepland.dev/foundation/frontend:1.0.0
          ports:
            - containerPort: 80
          command: ["bash", "-c", "app-runserver.sh"]
